# AITester

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  pyproject.toml
ai_tester/: __init__.py  destination_policy.py  gpu.py  http_transport.py  ollama.py  openai_compatible.py  services.py  web.py
ai_tester/routes/: __init__.py  common.py  dashboard.py  destinations.py  ollama.py  openai.py  status.py
ai_tester/static/: app.css  app.js
ai_tester/templates/: index.html
config/: allowed_destinations.json
deploy/airgap/: build-bundle.sh  install.sh
deploy/gpu/: nvidia-smi  rocm-smi
tests/: test_airgap_deployment.py  test_destination_policy.py  test_gpu.py  test_http_transport.py  test_ollama.py  test_openai_compatible.py  test_services.py  test_web.py  test_web_architecture.py
